@@ -1,3 +1,7 @@
+2014-06-14  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/ziggurat.cpp (zsetseedGSL): Add seed setter for GSL variant
+
 2014-01-26  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION: Version 0.1.2
